<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">


            <ImageView
                android:id="@+id/avatar"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@+id/expandableLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clickLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/expandableLayout"
                app:layout_constraintStart_toEndOf="@+id/avatar"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:text="@string/bakhromov_mirshodbek"
                    android:textColor="@color/colorText"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:text="@string/android_mobile_app_developer"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/expandableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/avatar">

                <TextView
                    android:id="@+id/shortBio"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="10dp"
                    android:text="@string/description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/shortBio">

                    <TextView
                        android:id="@+id/company"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/company"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/companyName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/paddingStart"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/company" />


                    <TextView
                        android:id="@+id/country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/country"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/countryName"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/company"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/countryName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/paddingStart"
                        app:layout_constraintStart_toStartOf="@id/country"
                        app:layout_constraintTop_toBottomOf="@+id/country" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageButton
                android:id="@+id/twitter"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="@dimen/paddingTop"
                android:background="?android:attr/windowBackground"
                android:foreground="?android:attr/selectableItemBackground"
                android:scaleType="centerCrop"
                android:src="@drawable/twitter1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/linkedId"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/expandableLayout" />

            <ImageButton
                android:id="@+id/linkedId"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="@dimen/paddingTop"
                android:background="?android:attr/windowBackground"
                android:foreground="?android:attr/selectableItemBackground"
                android:scaleType="centerCrop"
                android:src="@drawable/linkedin1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/github"
                app:layout_constraintStart_toEndOf="@+id/twitter"
                app:layout_constraintTop_toBottomOf="@+id/expandableLayout" />

            <ImageButton
                android:id="@+id/github"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="@dimen/paddingTop"
                android:background="?android:attr/windowBackground"
                android:foreground="?android:attr/selectableItemBackground"
                android:scaleType="centerCrop"
                android:src="@drawable/github1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/facebook"
                app:layout_constraintStart_toEndOf="@+id/linkedId"
                app:layout_constraintTop_toBottomOf="@+id/expandableLayout" />

            <ImageButton
                android:id="@+id/facebook"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="@dimen/paddingTop"
                android:background="?android:attr/windowBackground"
                android:foreground="?android:attr/selectableItemBackground"
                android:scaleType="centerCrop"
                android:src="@drawable/facebook1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/website"
                app:layout_constraintStart_toEndOf="@+id/github"
                app:layout_constraintTop_toBottomOf="@+id/expandableLayout" />

            <ImageButton
                android:id="@+id/website"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="@dimen/paddingTop"
                android:background="?android:attr/windowBackground"
                android:foreground="?android:attr/selectableItemBackground"
                android:scaleType="centerCrop"
                android:src="@drawable/web"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/facebook"
                app:layout_constraintTop_toBottomOf="@+id/expandableLayout" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>